--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
     "react": "^18.2.0",
+    "react-awesome-slider": "^3.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
