--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
+    "i18next": "^22.0.2",
+    "i18next-browser-languagedetector": "^7.0.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^3.0.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-icons": "^4.4.0",
     "react-image-gallery": "^1.2.11",
     "react-router-dom": "^6.4.1",
